# rollup-starter

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  GETTING_STARTED_WITH_CELESTIA.md  Makefile  READEME_EXTERNAL_MOCK_DA.ms  README.md  README_EXTERNAL_MOCK_DA.md  constants.toml  rust-toolchain.toml
.claude/commands/: debug_state_accesses.md  sdk-upgrade-to-latest-dev.md
.github/actions/setup-mock-da/: action.yml
.github/actions/teardown-mock-da/: action.yml
.github/workflows/: e2e-frontend.yml  reusable-job.yml  rust.yml  soak-test.yml
configs/celestia/: evm_pinned_cache.json  genesis.json  rollup.toml  rollup_aws.toml
configs/mock/: evm_pinned_cache.json  genesis.json  rollup-dockerized.toml  rollup.toml  rollup_aws.toml
configs/mock_external/: genesis.json  rollup.toml  rollup_aws.toml
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/provers/sp1/: Cargo.toml
crates/provers/sp1/guest-celestia/: Cargo.toml
crates/provers/sp1/guest-mock/: Cargo.toml
crates/provers/sp1/src/: lib.rs
crates/rollup/: Cargo.toml
crates/rollup/src/: da.rs  rollup.rs
crates/rollup/tests/: test_helpers.rs
crates/rollup/tests/bank/: mod.rs
crates/stf/: Cargo.toml
crates/stf/src/: authentication.rs  delegation.rs  runtime.rs
crates/stf/stf-declaration/: Cargo.toml
crates/stf/stf-declaration/src/: lib.rs
crates/utils/node-discovery/: Cargo.toml
crates/utils/node-discovery/src/: main.rs
examples/metamask/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts
examples/metamask/e2e/: eip712-headless.spec.ts
examples/metamask/src/: App.css  App.tsx  ConnectButton.tsx
examples/privy/: package-lock.json  playwright.config.ts
examples/privy/e2e/: auth-and-send.spec.ts
examples/privy/src/: App.tsx  main.tsx
examples/starter-js/: package-lock.json
examples/value-setter/src/: lib.rs
examples/value-setter/tests/: test_value_setter.rs
foundry-tests/: .env.example  .gitignore  README.md  foundry.toml  run.sh
foundry-tests/script/: AllTests.s.sol  CalldataTests.s.sol  ContextTests.s.sol  DeploymentTests.s.sol  EventTests.s.sol  MemoryTests.s.sol  PrecompileTests.s.sol  StorageTests.s.sol
foundry-tests/src/: CalldataTester.sol  ContextTester.sol  Create2Factory.sol  EventTester.sol  MemoryTester.sol  PrecompileTester.sol  SimpleContract.sol  StorageTester.sol
integrations/: different_ports.env  docker-compose.celestia.yml
integrations/hyperlane/: docker-compose.hyp-evm.yml
integrations/rollup/: Dockerfile.mock
scripts/: debug_state_accesses.sh  run-soak-test.sh
scripts/acceptance-test/: Cargo.toml  README.md  build.rs  genesis.json  rollup_config.toml
scripts/acceptance-test/evm-contracts/: StateConsistencyTester.abi  StateConsistencyTester.sol  StateConsistencyTester.sol.sha256
scripts/acceptance-test/src/: evm_contracts.rs  evm_soak.rs  fetch_and_compare.rs  lib.rs  main.rs  state_consistency.rs  versioned_setup.rs
scripts/soak-test/: Cargo.toml
scripts/soak-test/src/: main.rs
