[workspace]

resolver = "2"

members = [
  "crates/rollup",
  "crates/stf",
  "crates/stf/stf-declaration",
  "crates/utils/node-discovery",
  "examples/value-setter", 
  "scripts/acceptance-test",
  "scripts/soak-test",
]
default-members = ["crates/rollup", "crates/utils/node-discovery"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.88"

[workspace.dependencies]
sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d", features = [
  "evm",
] }
sov-accounts = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-api-spec = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-attester-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-chain-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-blob-storage = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-paymaster = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-capabilities = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-celestia-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-cli = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-db = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-hyperlane-integration = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d", features = [
  "evm",
] }
sov-test-state-consistency = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-kernels = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-ledger-apis = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-mock-da = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-mock-zkvm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-modules-rollup-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-modules-stf-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-uniqueness = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-operator-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-prover-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-revenue-share = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-risc0-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-sp1-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-sequencer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-soak-testing-lib = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-test-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-rollup-apis = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-universal-wallet = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-zkvm-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-build = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-ethereum = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-evm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-soak-testing = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-eip712-auth = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-rest-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
sov-proxy-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "5c0a98ea51ab7246bc318dbfd06928229ffa214d" }
stf-starter = { path = "./crates/stf", default-features = false }
stf-starter-declaration = { path = "./crates/stf/stf-declaration", default-features = false }
node-discovery = { path = "./crates/utils/node-discovery", default-features = false }
value-setter = { path = "./examples/value-setter" }
strum = { version = "0.26.3", features = ["derive"] }

alloy-consensus = { version = "1.0.37", default-features = false }
axum = { version = "0.7.9", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
sha2 = { version = "=0.10.9", default-features = false }

schemars = { version = "0.8.21", features = ["derive"] }
anyhow = { version = "1.0.95" }
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "1", features = ["rc", "bytes"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
tempfile = "3.20"
jsonrpsee = { version = "0.26", features = ["jsonrpsee-types"] }
risc0-build = "2.1"

# [patch."https://github.com/paradigmxyz/reth"]
# reth-rpc-eth-types = { path = "/home/gentoo/work/sovereign/reth/crates/rpc/rpc-eth-types" }
