[package]
name = "rollup-starter-soak-test"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.12", features = ["rustls-tls"] }


sov-soak-testing-lib = { workspace = true }
sov-api-spec = { workspace = true }
sov-rollup-interface = { workspace = true, features = ["arbitrary"] }
sov-modules-rollup-blueprint = { workspace = true, features = ["native"] }
sov-test-utils = { workspace = true, features = ["arbitrary"] }
sov-risc0-adapter = { workspace = true, optional = true, features = ["arbitrary", "native"] }
sov-sp1-adapter = { workspace = true, optional = true, features = ["arbitrary", "native"] }

rollup-starter = { path = "../../crates/rollup", default-features = false }

sov-celestia-adapter = { workspace = true, optional = true, features = ["native", "arbitrary"] }
sov-mock-da = { workspace = true, optional = true, features = ["native", "arbitrary"] }

[features]
default = ["mock_da", "mock_zkvm"]
mock_da = ["rollup-starter/mock_da", "dep:sov-mock-da"]
mock_da_external = ["rollup-starter/mock_da_external", "dep:sov-mock-da"]
celestia_da = ["rollup-starter/celestia_da", "dep:sov-celestia-adapter"]
sp1 = ["sov-sp1-adapter", "rollup-starter/sp1"]
risc0 = ["sov-risc0-adapter", "rollup-starter/risc0"]
mock_zkvm = ["rollup-starter/mock_zkvm"]


[[bin]]
name = "subscriber"
path = "src/bin/subscriber.rs"
