[package]
name = "sov-demo-prover-guest-celestia-sp1"
version = "0.3.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = { version = "1.0.95" }

sp1-zkvm = { version = "6.0.2" }
stf-starter = { path = "../../../stf", default-features = false, features = ["celestia_da"] }

sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37", features = ["evm"] }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37" }
sov-celestia-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37" }
sov-modules-stf-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37" }
sov-sp1-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37" }
sov-mock-zkvm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37" }
sov-kernels = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37" }
sov-metrics = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "bf113c5ab4c8769f8cbae5301825f95cfc312e37", optional = true }

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-6.0.0" }
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-6.0.0" }
# Needed for ed25519-consensus which depends on curve25519-dalek-ng
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-6.0.0" }
# Pin the SP1-compatible ed25519-consensus revision for the v6 guest dependency graph.
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", rev = "78f83b21767077f602f30148e513a52e844abbb6" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-6.0.0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = [
    "sov-celestia-adapter/bench",
    "sov-modules-api/bench",
    "sov-state/bench",
    "sov-modules-stf-blueprint/bench",
    "stf-starter/bench",
    "sov-metrics/sp1"
]
