[workspace]

[package]
name = "guest-mock-starter-sp1"
version = "0.3.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { version = "1.0.95" }
sp1-zkvm = { version = "5.0.8" }
serde = { version = "1.0.188", features = ["derive", "rc"] }
sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e", features = ["evm"] }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e" }
sov-mock-da = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e" }
sov-modules-stf-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e" }
sov-sp1-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e" }
sov-mock-zkvm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e" }
sov-kernels = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e" }
sov-metrics = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "a972912be8de8f705a0b8be2dd90013ce04b7d6e", optional = true }

stf-starter = { path = "../../../stf", default-features = false, features = ["mock_da"] }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", branch = "patch-curve25519-v4.1.3" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = ["sov-modules-api/bench", "sov-state/bench", "sov-modules-stf-blueprint/bench", "sov-metrics/sp1", "stf-starter/bench"]
